--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="text-muted pull-right">
-                    <%= entry.dob %>
+                    <%= entry.pub %>
                 </div>
                 <%= entry.title %>
             </div>
